# hephaestus

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Joint.cpp  Joint_solver.cpp  Joint_solver.hpp  Makefile  README.md  cmake_install.cmake  dockerfile  petscInstall.sh
data/: myBeam_3.g  (+1 more)
examples/magnetostatic/: CMakeLists.txt  Main.cpp
examples/magnetostatic_volumetric/: CMakeLists.txt  Main.cpp
examples/team4/: CMakeLists.txt  Main.cpp
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hephaestus.hpp
src/auxsolvers/: auxsolver_base.hpp  auxsolvers.cpp  auxsolvers.hpp  coefficient_aux.cpp  coefficient_aux.hpp  coupled_coefficient_aux.cpp  coupled_coefficient_aux.hpp  curl_aux.cpp  curl_aux.hpp  flux_monitor_aux.cpp  flux_monitor_aux.hpp  helmholtz_projector.cpp  helmholtz_projector.hpp  joule_heating_aux.cpp  joule_heating_aux.hpp  l2_error_vector_aux.cpp  l2_error_vector_aux.hpp  line_sampler_aux.cpp  line_sampler_aux.hpp  lorentz_force_aux.cpp  lorentz_force_aux.hpp  postprocessors.cpp  postprocessors.hpp  scaled_curl_vector_gridfunction_aux.cpp  scaled_curl_vector_gridfunction_aux.hpp  scaled_gridfunction_aux.cpp  scaled_gridfunction_aux.hpp  scaled_vector_gridfunction_aux.cpp  scaled_vector_gridfunction_aux.hpp  vector_coefficient_aux.cpp  vector_coefficient_aux.hpp  vector_gridfunction_cross_product_aux.cpp  vector_gridfunction_cross_product_aux.hpp  vector_gridfunction_dot_product_aux.cpp  vector_gridfunction_dot_product_aux.hpp
src/boundary_conditions/: boundary_condition_base.cpp  boundary_condition_base.hpp  boundary_conditions.cpp  boundary_conditions.hpp
src/coefficients/: coefficients.cpp  coefficients.hpp
src/data_collection/: named_fields_map.cpp  named_fields_map.hpp
src/delegate/: delegate_base.hpp  mesh_delegate.cpp  mesh_delegate.hpp
src/equation_systems/: complex_equation_system.cpp  complex_equation_system.hpp  equation_system.cpp  equation_system.hpp
src/executioners/: executioner_base.cpp  executioner_base.hpp  steady_executioner.cpp  steady_executioner.hpp  transient_executioner.cpp  transient_executioner.hpp
src/factory/: factory.cpp  factory.hpp
src/formulations/: complex_a_form.cpp  complex_a_form.hpp  complex_em_formulation_interface.hpp  complex_maxwell_form.hpp  em_formulation_interface.hpp  equation_system_operator.cpp  equation_system_operator.hpp  equation_system_problem_operator.hpp  formulation.hpp  formulation_base.hpp  frequency_domain_em_formulation.cpp  frequency_domain_em_formulation.hpp  frequency_domain_equation_system_operator.cpp  frequency_domain_equation_system_operator.hpp  frequency_domain_formulation.cpp  frequency_domain_formulation.hpp  hertz_formulation.cpp  hertz_formulation.hpp  problem_operator.cpp  problem_operator.hpp  problem_operator_interface.hpp  steady_formulation.cpp  steady_formulation.hpp  steady_state_em_formulation.cpp  steady_state_em_formulation.hpp  steady_state_equation_system_operator.cpp  steady_state_equation_system_operator.hpp  steady_state_formulation.cpp  steady_state_formulation.hpp  time_domain_em_formulation.cpp  time_domain_em_formulation.hpp  time_domain_equation_system_operator.cpp  time_domain_equation_system_operator.hpp  time_domain_formulation.cpp  time_domain_formulation.hpp  time_domain_problem_operator.cpp  time_domain_problem_operator.hpp  transient_formulation.cpp  transient_formulation.hpp
src/gridfunctions/: gridfunctions.cpp  gridfunctions.hpp
src/hephaestus/: CMakeLists.txt  hephaestus.cpp
src/hephaestus_lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aform_solver.cpp  aform_solver.hpp  auxkernels.cpp  auxkernels.hpp  av_solver.cpp  av_solver.hpp  boundary_conditions.cpp  boundary_conditions.hpp  cmake_install.cmake  dual_solver.cpp  dual_solver.hpp  e_solver.cpp  e_solver.hpp  eb_dual_solver.cpp  eb_dual_solver.hpp  eform_solver.cpp  eform_solver.hpp  equation_system.cpp  equation_system.hpp  executioner.cpp  executioner.hpp  factory.cpp  factory.hpp  formulation.cpp  formulation.hpp  h_form_solver.cpp  h_form_solver.hpp  h_solver.cpp  h_solver.hpp  hcurl_solver.cpp  hcurl_solver.hpp  hephaestus.hpp  hephaestus_eform.cpp  hephaestus_eform.hpp  hephaestus_h_form.cpp  hephaestus_h_form.hpp  hephaestus_hertz.cpp  (+33 more)
src/integrators/: DomainLFH1DivIntegrator.cpp  DomainLFH1DivIntegrator.hpp  MixedWeakDivIntegrator.cpp  MixedWeakDivIntegrator.hpp  MixedWeakDivergenceIntegrator.cpp  MixedWeakDivergenceIntegrator.hpp  integrators.hpp
src/io/: inputs.hpp  logging.cpp  logging.hpp  outputs.cpp  outputs.hpp
src/kernels/: curl_curl_kernel.cpp  curl_curl_kernel.hpp  diffusion_kernel.cpp  diffusion_kernel.hpp  domain_divergence_lf_kernel.cpp  domain_divergence_lf_kernel.hpp  domain_lf_kernel.cpp  domain_lf_kernel.hpp  kernel_base.hpp  kernel_store.hpp  kernels.hpp  linear_elasticity_kernel.cpp  linear_elasticity_kernel.hpp  linear_kernel.cpp  linear_kernel.hpp  mixed_vector_gradient_kernel.cpp  mixed_vector_gradient_kernel.hpp  mixed_weak_divergence_kernel.cpp  mixed_weak_divergence_kernel.hpp  vector_fe_mass_kernel.cpp  vector_fe_mass_kernel.hpp  vector_fe_weak_divergence_kernel.cpp  vector_fe_weak_divergence_kernel.hpp  weak_curl_curl_kernel.cpp  weak_curl_curl_kernel.hpp  weak_curl_kernel.cpp  weak_curl_kernel.hpp
src/log/: logger.cpp  logger.hpp  timer.hpp
src/named_fields_map/: hephaestus_containers.cpp  hephaestus_containers.hpp  named_fields_map.hpp
src/problem_builders/: frequency_domain_problem_builder.cpp  frequency_domain_problem_builder.hpp  problem_builder.hpp  problem_builder_base.cpp  problem_builder_base.hpp  steady_state_equation_system_problem_builder.cpp  steady_state_equation_system_problem_builder.hpp  steady_state_problem_builder.cpp  steady_state_problem_builder.hpp  time_domain_equation_system_problem_builder.cpp  time_domain_equation_system_problem_builder.hpp  time_domain_problem_builder.cpp  (+1 more)
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mesh.  mesh.mesh
(+210 files in other folders)
